FRONT 0.8.4 Se ha reparado el componente relCAL_Entregas, ahora los estudiantes pueden hacer entregas correctamente Se ha modificado el relCALService y el assignmentService para que funcione de acuerdo al cambio en servicios API (Revisar desde commit 0.12.0 en SGAPA_API) Se ha agregado el badge blue a App.css para implementarla en boton de relCAL_Entregas

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,11 @@ body{
   color: white;
 }
 
+.badge-blue {
+  background-color: #2196F3; /* Azul (como en tu versión anterior) */
+  color: white;
+}
+
 .icon-btn {
   cursor: pointer;
   font-size: 1.2rem;
